force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__ComplianceScopeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplianceScopeType__c</fullName>
    <label>Compliance Scope Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplianceScopeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>