force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__IsLicenseExempted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsLicenseExempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Exempted</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsLicenseExempted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>