force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__IssuingPartyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuingPartyId__c</fullName>
    <label>Issuing Party</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuingPartyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>