force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__LicenseCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__LicenseCategory__c</fullName>
    <label>License Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LicenseCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>