force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__LicenseIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LicenseIssuedDate__c</fullName>
    <label>License Issued Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LicenseIssuedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>