force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LicenseNumber__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LicenseNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>