force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__ReceivingPartyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReceivingPartyId__c</fullName>
    <label>Receiving Party</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReceivingPartyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>