force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__rel_1721371847303_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721371847303_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyBusinessLicense_ReceivingPartyI_rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyBusinessLicense_ReceivingPartyI_rel</relationshipLabel>
    <relationshipName>rel_1721371847303_end</relationshipName>
    <type>Lookup</type>
</CustomField>