force-app/main/default/objects/ssot__PartyBusinessLicense__dlm/fields/ssot__rel_1721372125757_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721372125757_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyBusinessLicense_BusinessTypeId__rel</label>
    <referenceTo>ssot__BusinessType__dlm</referenceTo>
    <relationshipLabel>PartyBusinessLicense_BusinessTypeId__rel</relationshipLabel>
    <relationshipName>rel_1721372125757_end</relationshipName>
    <type>Lookup</type>
</CustomField>